--- a/insights/zero-trust-cloud-architecture.html
+++ b/insights/zero-trust-cloud-architecture.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 
 <title>Zero Trust in the Cloud: Architecture Beyond Buzzwords | Enterprise Perspective</title>
-<meta name="description" content="Zero Trust in the Cloud: Moving beyond buzzwords to practical enterprise architecture, identity-centric security, and resilient cloud design." />
+<meta name="description" content="Most Zero Trust implementations fail not because of tooling gaps, but because identity sprawl and reactive security layering are never addressed at the architecture level. An enterprise architect's perspective." />
 </head>
 
 <body>
@@ -42,124 +42,168 @@
        style="width:100%; border-radius:12px;"
        loading="lazy" decoding="async">
   <figcaption style="font-size:14px; opacity:0.7; margin-top:8px;">
-    Zero Trust shifts security from perimeter defense to identity-centric verification.
+    Zero Trust shifts security from perimeter defense to identity-centric, continuous verification.
   </figcaption>
 </figure>
 
 <p>
-Zero Trust has become a board-level mandate. Yet in many organizations, it remains a collection of tools rather than a cohesive architectural strategy.
+Zero Trust has become a board-level mandate. Yet in most organisations I've worked with, it remains a collection of vendor tools rather than a cohesive architectural strategy. Security teams get a budget, procure a set of products, and declare the programme complete. The architecture beneath — identity models, network design, workload policy, data classification — is rarely touched.
 </p>
 
 <p>
-In cloud-native and hybrid environments, traditional perimeter-based models collapse. Networks are fluid. Workloads are distributed. Users operate from anywhere. The perimeter is no longer a firewall — it is identity.
+That is not Zero Trust. That is Zero Trust branding applied to perimeter security with extra steps.
+</p>
+
+<p>
+In cloud-native and hybrid environments, traditional perimeter-based models collapse. Networks are fluid. Workloads are distributed. Users operate from anywhere. The perimeter is no longer a firewall — it is identity. And if your identity architecture is a mess, your Zero Trust programme is built on sand.
 </p>
 
 <blockquote class="signature-quote">
-Zero Trust is not a product. It is an architectural philosophy grounded in continuous verification.
+Zero Trust is not a product. It is an architectural philosophy grounded in continuous verification — and it only works if the architecture beneath it is deliberate.
 </blockquote>
+
+<h2>Where Most Implementations Go Wrong</h2>
+
+<p>
+This is the section most Zero Trust articles skip. Let me be direct about what I see repeatedly in enterprise engagements.
+</p>
+
+<p>
+<strong>Identity sprawl is the silent killer.</strong> Organisations attempt Zero Trust while managing three or four identity providers — a legacy on-prem Active Directory, an Azure AD tenant from a cloud migration, a separate IdP inherited from an acquisition, and a handful of SaaS applications with their own local user stores. Conditional access policies are configured against one IdP. The others are effectively uncontrolled trust boundaries. The architecture looks like Zero Trust on a diagram. In practice, there are a dozen implicit trust paths no one has mapped.
+</p>
+
+<p>
+<strong>Micro-segmentation is over-prioritised relative to identity and data controls.</strong> Network segmentation is visible and deliverable — it shows up in diagrams, satisfies auditors, and gives security teams a tangible output. So organisations invest heavily in it while data classification remains aspirational and workload identity is an afterthought. The result is a well-segmented network where applications still run with over-privileged service accounts and sensitive data is encrypted at rest but unclassified in motion.
+</p>
+
+<p>
+<strong>Zero Trust is treated as a procurement event, not an architecture programme.</strong> The decision gets made at the CISO level, a vendor is selected, and the rollout is handed to an implementation team. Enterprise architecture is rarely in the room. What gets built is a security overlay on top of an architecture that was never designed for it — and the friction that creates slows delivery, frustrates engineering teams, and eventually gets bypassed through exceptions.
+</p>
+
+<p>
+<strong>Governance doesn't keep pace with the platform.</strong> Policies defined at programme kick-off become stale within months as the cloud estate evolves. New workloads are onboarded outside the Zero Trust guardrails. Exceptions accumulate. Without a governance model that treats policy as living architecture — not a one-time configuration — Zero Trust degrades faster than it was built.
+</p>
 
 <h2>Why Zero Trust Matters Now</h2>
 
 <p>
-Cloud adoption, remote work, API ecosystems, and supply chain integrations have expanded the enterprise attack surface dramatically. Implicit trust within internal networks is no longer viable.
+Cloud adoption, remote work, API ecosystems, and supply chain integrations have expanded the enterprise attack surface to a point where implicit trust within internal networks is no longer a viable posture. A compromised identity, a misconfigured service account, or an over-permissioned API is all it takes.
 </p>
 
 <p>
-Zero Trust replaces assumed trust with explicit validation. Every request — whether from a user, service, or workload — must be authenticated, authorized, and validated based on context.
+Zero Trust replaces assumed trust with explicit, continuous validation. Every request — whether from a user, a service, or a workload — must be authenticated, authorised, and validated based on context. Not once at login. Continuously.
 </p>
 
 <p>
-For the enterprise, this is not merely a security shift. It is a resilience strategy.
+For the enterprise, this is not merely a security shift. It is a resilience strategy. And when implemented as architecture — not tooling — it becomes a platform capability that enables rather than restricts.
 </p>
 
 <h2>Core Architectural Principles</h2>
 
 <h3>1. Identity as the Control Plane</h3>
+
 <p>
-Identity becomes the primary enforcement boundary. Robust IAM, strong authentication, conditional access policies, and federated identity models form the foundation of Zero Trust architecture.
-</p>
-<p>
-Access decisions should incorporate user context, device posture, and risk signals — not just network location.
+Identity is the foundation everything else depends on. Before micro-segmentation, before data classification, before policy enforcement — get identity right. That means consolidating identity providers where possible, establishing a single authoritative directory, and designing conditional access policies that incorporate user context, device posture, location, and real-time risk signals — not just group membership.
 </p>
 
-<h3>2. Least Privilege Everywhere</h3>
 <p>
-Zero Trust extends least-privilege principles beyond user access. Applications, containers, serverless functions, and APIs should operate with minimal permissions required for their function.
+In hybrid environments, federated identity models must be designed explicitly. The trust relationships between on-prem directories and cloud identity platforms need architectural governance, not just technical configuration.
 </p>
+
+<h3>2. Least Privilege Everywhere — Including Workloads</h3>
+
 <p>
-Granular policy design prevents lateral movement within cloud environments.
+Least privilege is not just a user access principle. Applications, containers, serverless functions, APIs, and automation pipelines all operate with permissions. In most enterprises, those permissions are set once at deployment and never reviewed. Service accounts accumulate access. Managed identities are assigned broad roles for convenience.
+</p>
+
+<p>
+Zero Trust requires treating workload identity with the same rigour as user identity. Granular, time-bound, just-in-time access models for non-human identities are where the real risk reduction lies — and where most programmes have the largest gap.
 </p>
 
 <h3>3. Micro-Segmentation and Workload Isolation</h3>
+
 <p>
-Traditional flat networks are replaced by segmented, workload-level boundaries. Micro-segmentation limits blast radius and enforces isolation between application tiers.
+Network segmentation limits blast radius and enforces isolation between application tiers. In cloud environments this translates to network security groups, private endpoints, service mesh controls, and policy-driven traffic filtering. Done well, it contains a breach. Done in isolation — without the identity and data controls to complement it — it is an expensive partial solution.
 </p>
+
 <p>
-In the cloud, this often translates to network segmentation, service mesh controls, and policy-driven traffic filtering.
+Prioritise segmentation in proportion to data sensitivity and blast radius risk, not in proportion to what's easiest to diagram.
 </p>
 
 <h3>4. Continuous Monitoring and Telemetry</h3>
+
 <p>
-Zero Trust assumes breach is possible. Real-time logging, behavioral analytics, and anomaly detection are critical for rapid detection and response.
+Zero Trust assumes breach is possible — probable, even. The architecture must be designed to detect and respond, not just prevent. Real-time logging, behavioural analytics, and anomaly detection are not add-ons; they are structural requirements.
 </p>
+
 <p>
-Cloud-native observability platforms enable continuous validation rather than periodic audits.
+The practical implication: observability must be designed into the platform from the outset, with centralised telemetry, defined retention policies, and automated alerting aligned to the threat model. Periodic audits are insufficient. Continuous validation is the operating model.
 </p>
 
 <h3>5. Data-Centric Protection</h3>
+
 <p>
-Security must travel with the data. Classification, encryption at rest and in transit, and context-aware access controls ensure protection independent of workload location.
+Security must travel with the data, not just the network it traverses. Classification, encryption at rest and in transit, and context-aware access controls ensure protection independent of workload location. This is the principle most frequently deferred — classification is hard, politically sensitive, and time-consuming. But without it, you cannot enforce meaningful access controls, and you cannot demonstrate compliance with confidence.
 </p>
 
-<h2>Enterprise Architecture Considerations</h2>
+<h2>The Enterprise Architecture Imperative</h2>
 
 <p>
-Zero Trust adoption cannot be delegated solely to security teams. It requires architectural alignment across identity, networking, application design, and governance.
+Zero Trust adoption cannot be delegated solely to security teams, and it cannot succeed as a technology programme managed independently of enterprise architecture. The reason most implementations fall short is that they treat Zero Trust as a security layer to be added — rather than an architectural principle to be embedded.
+</p>
+
+<p>
+Enterprise architecture's role is to ensure Zero Trust principles are designed into the platform — into the landing zone, the identity model, the network topology, the DevSecOps pipeline, and the governance framework — before workloads arrive, not after incidents occur.
+</p>
+
+<p>
+That means architecture must be in the room when Zero Trust strategy is being defined. Not reviewing the output. Shaping the approach.
+</p>
+
+<p>
+In practice, this requires four things to happen in sequence — not in parallel, not as a checklist:
 </p>
 
 <ul>
-  <li>Define a target-state Zero Trust architecture blueprint</li>
-  <li>Assess maturity across identity, network, and workload controls</li>
-  <li>Integrate security policy into DevOps pipelines (DevSecOps)</li>
-  <li>Align Zero Trust initiatives with regulatory and compliance objectives</li>
+  <li><strong>Define a target-state Zero Trust architecture blueprint</strong> that spans identity, network, workload, and data domains — with explicit decisions documented for each layer.</li>
+  <li><strong>Assess current-state maturity honestly</strong> across those domains, including identity sprawl, over-privileged service accounts, and governance gaps that security tooling won't surface.</li>
+  <li><strong>Embed Zero Trust controls into DevSecOps pipelines</strong> so that policy is enforced at the point of delivery — not reviewed after the fact by a security team working from a backlog.</li>
+  <li><strong>Establish a living governance model</strong> that treats policy as architecture — subject to review, versioning, and continuous alignment as the platform evolves.</li>
 </ul>
-
-<p>
-The role of enterprise architecture is to ensure Zero Trust principles are embedded systematically — not layered reactively.
-</p>
 
 <h2>From Security Control to Business Enabler</h2>
 
 <p>
-When implemented strategically, Zero Trust strengthens more than cyber defense. It enables:
+When implemented as architecture rather than tooling, Zero Trust creates platform capabilities that benefit the business well beyond security. Confident multi-cloud adoption becomes possible because trust is not network-dependent. Secure digital collaboration with partners and supply chain becomes manageable because identity federation is designed rather than improvised. Regulatory posture improves because access controls are systematic and auditable rather than point-in-time.
 </p>
 
-<ul>
-  <li>Secure digital collaboration</li>
-  <li>Confident multi-cloud adoption</li>
-  <li>Resilient remote workforce models</li>
-  <li>Improved regulatory posture</li>
-</ul>
-
 <p>
-Security maturity becomes a competitive advantage rather than a compliance obligation.
+Security maturity built on architectural foundations becomes a competitive advantage — and an accelerant for the digital programmes that depend on it.
 </p>
 
 <h2>Final Thoughts</h2>
 
 <p>
-Zero Trust in the cloud is not achieved through tooling alone. It requires intentional architecture, disciplined governance, and cultural alignment across engineering and security teams.
+Zero Trust in the cloud is achievable. But it requires starting with an honest assessment of where the real gaps are — which are almost never in tooling, and almost always in identity architecture, workload governance, and the organisational habit of treating security as someone else's problem.
 </p>
 
 <p>
-Beyond the buzzwords lies a clear objective: reduce implicit trust, increase visibility, and build resilient digital platforms that can withstand evolving threats.
+The organisations that get this right don't buy their way to Zero Trust. They architect their way there — deliberately, systematically, and with enterprise architecture playing a central role from day one.
+</p>
+
+<blockquote class="signature-quote">
+The question worth asking is not "do we have Zero Trust tools?" It is "does our architecture enforce Zero Trust principles — and would we know if it didn't?"
+</blockquote>
+
+<p>
+<em>What's your experience with Zero Trust in enterprise environments? I'm particularly interested in how organisations are handling identity consolidation and workload identity governance — the two areas where I see the largest gap between intent and implementation. Connect with me on <a href="https://linkedin.com/in/sankum" target="_blank" rel="noopener">LinkedIn</a> or reach out directly.</em>
 </p>
 
 <hr style="margin:50px 0; opacity:0.2;">
 <nav id="articleNav" style="display:flex; justify-content:space-between; gap:20px;"></nav>
 
 <script>
-fetch('../data/articles.json')
+fetch('../data/insights.json')
   .then(res => res.json())
   .then(articles => {
     const currentPath = window.location.pathname.split('/').pop();
