--- a/insights/zero-trust-cloud-architecture.html
+++ b/insights/zero-trust-cloud-architecture.html
@@ -37,12 +37,12 @@
 <p class="subtitle">Enterprise Architecture | Cloud Security | Digital Resilience</p>
 
 <figure style="margin:40px 0; text-align:center;">
-  <img src="../assets/images/zero-trust-cloud-architecture.png"
+  <img src="../assets/images/zero-trust-hero.svg"
        alt="Zero Trust cloud architecture conceptual diagram"
        style="width:100%; border-radius:12px;"
        loading="lazy" decoding="async">
   <figcaption style="font-size:14px; opacity:0.7; margin-top:8px;">
-    Zero Trust shifts security from perimeter defense to identity-centric, continuous verification.
+    Zero Trust architecture diagram showing identity as the central control plane with continuous verification across users, devices, workloads and data.
   </figcaption>
 </figure>
 
