--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
 
   <div class="grid">
     <article class="card focus-card">
-      <img src="/assets/images/focus-tech-strategy.webp" alt="Strategic Focus Areas" />
+      <img src="/assets/images/portfolio-control-model.svg" alt="Strategic Focus Areas" />
 
       <div class="card-body">
         <h3>Typical engagement scope</h3>
 
   <ul class="focus-list">
-    <li>Defining target-state architecture and multi-year technology roadmaps</li>
-    <li>Aligning cloud and platform strategy with measurable business outcomes</li>
+    <li>Defining target-state architecture, operating models, and decision guardrails</li>
+    <li>Aligning cloud adoption strategy with measurable business outcomes</li>
+    <li>Building secure-by-default landing zones and platform blueprints for teams</li>
     <li>Embedding DevSecOps practices to increase delivery speed and reliability</li>
-    <li>Designing governance guardrails that enable innovation at scale</li>
+    <li>Designing governance frameworks that enable innovation while managing risk</li>
+    <li>Creating multi-year technology roadmaps aligned to business dependencies</li>
   </ul>
 
         <a href="/focus/" class="cta-focus">
